@@ -5,6 +5,9 @@
   1 to threads::shared::share must be one of $@% at .../Log/Dispatch/Syslog.pm
   line 67, near "$thread_lock)"'. Reported by David Schweikert.
 
+- Added support for auth-related parameters and replyto to
+  Log::Dispatch::Email::MailSender. Patch by Rohan Carly. Based on GitHub #10.
+
 
 2.46     2015-08-05
 
